# QCI-Exploration

./: .gitignore  LICENSE  README.md  compare_results.py  ensemble_fraud.py  pyproject.toml  qci_status.py  qciboost_fraud.py  requirements.txt  xgboost_fraud.py  xgboost_results.json
common/: __init__.py  data_loader.py  data_prep.py  data_types.py  evaluation.py  logging.py  qci.py  visualization.py
common/binary_classification/: __init__.py  data_loader.py  data_types.py  evaluation.py  visualization.py
common/binary_classification/ensemble_classifiers/: base.py  qboost.py
qci_exploration/: README.md  __main__.py  commands.py  config.py  data_loader.py  data_types.py  evaluation.py  main.py  qci.py
qci_exploration/models/: __init__.py  cvqboost_model.py  xgboost_model.py
results/car-fraud/qciboost/: results.json
results/car_fraud/xgboost/: results.json
results/kaggle/qcboost/: qciboost_results.json
results/kaggle/xgboost/: xgboost_results.json
results/mlg-ulb/qciboost/: results.json  results_knn.json  results_knn_over_sample.json  results_knn_smu_balanced_10k.json  results_knn_smu_balanced_1k.json  results_knn_smu_balanced_raw.json  results_knn_smu_raw.json  results_knn_smu_skew_raw.json  results_lda_smu_balanced_1k.json  results_lg.json  results_lg_over_sample.json  results_lg_smu_1k.json  results_xgb_smu_balanced_1k.json
results/mlg-ulb/xgboost/: results.json  results_oversampled.json
